# proteusllp-actuarial-library

./: .gitignore  .readthedocs.yaml  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE  Makefile  README.md  STYLE_GUIDE.md  codecov.yml  example.py  example_catastrophes.py  example_copulas.py  example_inflation.py  logging.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-gpu.txt  requirements.txt  test.py  test2.py
.devcontainer/: README.md  devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-pdm.yml
data/: cat_ylt.csv  cat_ylt2.csv  master_ylt.csv
data/proteus_scenario_generator/: Economics_USD_Inflation_Inflation Index.csv
data/reserve_risk/: claims_triangle.csv
docs/: Makefile  README.md  development.md  structure.md  usage.md
docs/source/: conf.py  contributing.rst  development.md  index.rst  license.rst  usage.md
docs/source/api/: config.rst  contracts.rst  copulas.rst  distributions.rst  frequency_severity.rst  maths.rst  modules.rst  pal.config.rst  pal.contracts.rst  pal.copulas.rst  pal.couplings.rst  pal.distributions.rst  pal.frequency_severity.rst  pal.maths.rst  pal.rst  pal.stats.rst  pal.stochastic_scalar.rst  pal.types.rst  pal.variables.rst  stats.rst  stochastic_scalar.rst  types.rst  variables.rst
docs/tutorials/: README.md  coupling_groups_and_copulas.md  distributions_guide.md  frequency_severity_modelling.md  getting_started.md  reinstatement_pricing.md  risk_measures_and_allocation.md  xol_reinsurance.md
examples/: advanced_copulas.py  capital_allocation_example.py  example.py  example_catastrophes.ipynb  example_catastrophes.py  example_copulas.ipynb  example_copulas.py  example_couplings_and_copulas.ipynb  example_couplings_and_copulas.py  example_inflation.ipynb  example_inflation.py  example_odp_reserve_risk.py  example_reinstatements.py  example_underwriting_risk.py  example_xol_tower.ipynb  example_xol_tower.py  typecheck_exports.py  utilities.py
mirror-package/: LICENSE  README.md  pyproject.toml
mirror-package/proteus/: __init__.py
pal/: __init__.py  _maths.py  config.py  contracts.py  copulas.py  couplings.py  couplings.pyi  distributions.py  frequency_severity.py  frequency_severity.pyi  maths.py  maths.pyi  reserve_risk.py  stats.py  stochastic_scalar.py  stochastic_scalar.pyi  types.py  variables.py
pcm/: catastrophes.py  copulas.py  couplings.py  distributions.py  frequency_severity.py  stats.py  stochastic_scalar.py  variables.py
src/pal/: __init__.py  _compat.py  contracts.py  copulas.py  distributions.py  frequency_severity.py  frequency_severity.pyi  maths.py  maths.pyi  risk_measures.py  stats.py  stochastic_scalar.py  stochastic_scalar.pyi  types.py  variables.py
tests/: test_FreqSev.py  test_FrequencySeverity.py  test_additional_numeric_operations.py  test_config_stats_minimal.py  test_contracts_extended.py.disabled  test_contracts_minimal.py  test_copulas.py  test_copulas_minimal.py  test_couplings.py  test_couplings_fs.py  test_couplings_minimal.py  test_distributions.py  test_frequency_severity_minimal.py  test_gpu_smoke.py  test_identity_comparison.py  test_mata_reinstatements.py  test_maths_minimal.py  test_package_imports.py  test_spectral_risk_measures.py  test_stats.py  test_stats_extended.py.disabled  test_stats_minimal.py  test_stochastic_freqsev_operations.py  test_stochastic_scalar.py  test_stochastic_scalar_extended.py.disabled  test_stochastic_scalar_minimal.py  test_type_protocols.py  test_variables.py  test_variables_extended.py.disabled  test_variables_minimal.py  test_xol.py
utilities/: distributions.py
