[project]
# Package name is namespaced with ProteusLLP organization for PyPI publishing
name = "proteusllp-actuarial-library"
dynamic = ["version"]
description = "Proteus Actuarial Library: A package for building and running stochastic actuarial models in Python."
authors = [
    {name = "James Norman", email = "james.norman@proteusllp.com"}
]
maintainers = [
    {name = "James Norman", email = "james.norman@proteusllp.com"}
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["actuarial", "insurance", "capital"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "typing_extensions>=4.0; python_version < '3.12'",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-codeblocks>=0.17.0",
]
dev = [
    "pandas-stubs>=2.0.0.0",
    "scipy-stubs>=1.10.0.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "vulture>=2.11",
    "pyright>=1.1.350",
]

[project.urls]
Homepage = "https://github.com/ProteusLLP/proteusllp-actuarial-library"
Repository = "https://github.com/ProteusLLP/proteusllp-actuarial-library"
Issues = "https://github.com/ProteusLLP/proteusllp-actuarial-library/issues"
Documentation = "https://proteusllp-actuarial-library.readthedocs.io/"


[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# Static analysis tool configurations
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["pal"]
exclude = ["pal/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring linting)
    "N",   # pep8-naming
    "S",   # bandit (security)
]
ignore = [
    "D102", # Missing docstring in public method (overrides inherit from base)
    "D105", # Missing docstring in magic method
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103"] # Allow assert and skip test function docstrings
"examples/*" = ["D"]       # Skip docstrings in examples
"pal/__init__.py" = ["F403"] # Allow star imports in package init


[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test - asserts are normal in tests

[tool.vulture]
paths = ["pal"]
min_confidence = 80

[tool.setuptools]
packages = ["pal"]
include-package-data = true

[tool.setuptools.package-data]
pal = ["py.typed"]

[tool.setuptools_scm]
# Automatic versioning from git tags
# Version will be determined from git tags (e.g., v0.2.8 → 0.2.8)
version_file = "pal/_version.py"
fallback_version = "0.0.0+unknown"
